# testest

Robot arm/src/auo_demo/: package.xml
Robot arm/src/auo_demo/src/: auo_demo_control.cpp  pub_tool0_state.cpp
Robot arm/src/tmr_ros1/: .gitignore
Robot arm/src/tmr_ros1/tm5-900-moveit_config/config/: arm_controller_tm.yaml  arm_controller_vel.yaml  sensor.gazebo
Robot arm/src/tmr_ros1/tm5-900-moveit_config/launch/: gazebo.launch  tm5-900_gazebo.launch  tm5-900_gazebo_zh.launch
Robot arm/src/tmr_ros1/tm5-900-moveit_config/rviz/: model.rviz
Robot arm/src/tmr_ros1/tm_description/table/: model.sdf  table.world
Robot arm/src/tmr_ros1/tm_description/xacro/: macro.gazebo.xacro  macro.tm5-900-nominal-withforce.urdf.xacro  macro.tm5-900-nominal.urdf.xacro  macro.tm5x-900-nominal.urdf.xacro  table.urdf.xacro  tm5-900.urdf.xacro
Robot arm/src/tmr_ros1/tm_driver/: CMakeLists.txt
Robot arm/src/tmr_ros1/tm_driver/include/tm_driver/: tm_command.h  tm_driver.h  tm_ros_node.h
Robot arm/src/tmr_ros1/tm_driver/launch/: tm.rviz  tm5_900_bringup.launch  tm_common.launch
Robot arm/src/tmr_ros1/tm_driver/src/: main.cpp  tm_command.cpp  tm_driver.cpp  tm_ros_node.cpp  tm_ros_service.cpp  tm_state_publisher.cpp
Robot arm/src/tmr_ros1/tm_kinematics/: CMakeLists.txt  package.xml
Robot arm/src/tmr_ros1/tm_kinematics/include/tm_kinematics/: tm_kin.h
Robot arm/src/tmr_ros1/tm_msgs/: CMakeLists.txt
Robot arm/src/tmr_ros1/tm_msgs/srv/: SetVelocity.srv
Robot arm/src/tmr_ros1/tm_reflexxes2/: CMakeLists.txt  README.md  package.xml
Robot arm/src/tmr_ros1/tm_reflexxes2/launch/: sim.rviz  tm_action_gripper.launch  tm_simulation.launch  tm_simulation_picking.launch  tm_simulation_simple.launch
Robot arm/src/tmr_ros1/tm_reflexxes2/src/: points_and_lines.cpp  tm_action.cpp  tm_action_DLpicking_safe.cpp  tm_action_gripper.cpp  tm_action_gripper_position.cpp  tm_action_picking.cpp  tm_action_picking_safe.cpp  tm_auo.cpp  tm_cc_gripper.cpp  tm_demo_picking.cpp  tm_demo_picking_blue_plate.cpp  tm_otg.cpp  tm_part1_table_picking.cpp  tm_part1_yellow_picking.cpp  tm_sim.cpp  tm_sim_gripper.cpp  tm_sim_picking.cpp  tm_sim_picking_safe.cpp  tm_sim_picking_vel.cpp  tm_sim_simple.cpp  tm_sim_table_picking.cpp  tm_sim_table_safe.cpp  tm_sim_yellow_picking.cpp  tm_table_action_picking.cpp  tm_traj.cpp  tm_yellow_action_picking.cpp  tm_yellow_safe_picking.cpp
Robot arm/src/tmr_ros1/world/: table.world
src/auo_demo/: CMakeLists.txt
src/auo_demo/data/: test_data.txt
src/tmr_ros2/robot_control/: CMakeLists.txt  package.xml
src/tmr_ros2/robot_control/src/: gazebo_control (copy).cpp  gazebo_control.cpp
src/tmr_ros2/tm_kinematics/: CMakeLists.txt
src/tmr_ros2/tm_kinematics/include/tm_kinematics/: tm_kin.h
src/tmr_ros2/tm_kinematics/src/: main.cpp  tm_jacob.cpp  tm_kin.cpp
src/tmr_ros2/tm_moveit_config_tm5-900/: setup.py
src/tmr_ros2/tm_moveit_config_tm5-900/launch/: gazebo.launch  gazebo.launch.py  spawn.launch.py
tmr_ros2/robot_control/: CMakeLists.txt  package.xml
tmr_ros2/robot_control/src/: new_control.cpp
tmr_ros2/tm_driver/: CMakeLists.txt
tmr_ros2/tm_driver/include/tm_driver/: tm_ros2_sct.h
tmr_ros2/tm_driver/launch/: tm5-900_bringup.launch.py
tmr_ros2/tm_driver/src/: tm_ros2_sct.cpp
